force-app/main/default/objects/PS_Structure_Translation__c/PS_Structure_Translation__c.object-meta.xml
<CustomObject>
    <label>PS_Structure_Translation</label>
    <nameField>
        <label>PS_Structure_Translation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PS_Structure_Translation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>