force-app/main/default/objects/PS_Structure_Translation__c/fields/ItemNo__c.field-meta.xml
<CustomField>
    <fullName>ItemNo__c</fullName>
    <label>Reference ItemNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>