force-app/main/default/objects/PS_Structure_Translation__c/fields/Structure_Element__c.field-meta.xml
<CustomField>
    <fullName>Structure_Element__c</fullName>
    <label>Structure Element</label>
    <length>255</length>
    <type>Text</type>
</CustomField>