force-app/main/default/objects/PS_Structure_Translation__c/fields/ValOpp1__c.field-meta.xml
<CustomField>
    <fullName>ValOpp1__c</fullName>
    <label>ValOpp1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>