force-app/main/default/objects/PS_Structure_Translation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ItemNo__c</columns>
    <columns>ProdGroup__c</columns>
    <columns>SubGroup__c</columns>
    <columns>Structure_Element__c</columns>
    <columns>Text1__c</columns>
    <columns>Text2__c</columns>
    <columns>Text3__c</columns>
    <columns>Text4__c</columns>
    <columns>Text5__c</columns>
    <columns>Text6__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>